# charity-data-tools

./: .gitignore  README.md  pyproject.toml
charity_data_tools/: __init__.py
charity_data_tools/ftc/: __init__.py  client.py  extract.py  helpers.py
charity_data_tools/ukcat/: __init__.py  loader.py
charity_data_tools/ukg/: __init__.py  helpers.py  loader.py
